--- a/nombre_del_proyecto/package.json
+++ b/nombre_del_proyecto/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.9",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-maps-directions": "^1.9.0",
     "react-native-phone-number-input": "^2.1.0",
